--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">Appathon</string>
+    <string name="app_name">Seemoji</string>
     <string name="seemoji">Seemoji</string>
     <string name="subtype_en_US">English (UK)</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 </resources>
